Edited the title on game page. Removed tarball downlading.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Theprizeofperil by DanilKorotenko</title>
+    <title>"The Prize Of Peril" by DanilKorotenko</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,15 +15,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Theprizeofperil</h1>
+        <h1>The Prize Of Peril</h1>
         <p>This game is for INSTEAD engine (instead.sycall.ru). It based on Robert Shekley novell.</p>
 
         <p class="view"><a href="https://github.com/DanilKorotenko/thePrizeOfPeril">View the Project on GitHub <small>DanilKorotenko/thePrizeOfPeril</small></a></p>
 
-
         <ul>
           <li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
