Added TODO: list.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 				<p>This game is for INSTEAD engine (instead.sycall.ru). It based on Robert Shekley novell.</p>
 
         		<p class="view"><a href="https://github.com/DanilKorotenko/thePrizeOfPeril">View the Project on GitHub <small>DanilKorotenko/thePrizeOfPeril</small></a></p>
+<!-->
+TODO: Add link to Robert Shekley novell.
+TODO: Add release.
+TODO: Add links to lates release.
+TODO: Add link to submit issue.
+TODO: Add screenshots.
+TODO: Link to INSTEAD downloads.
+<!-->
 
         		<ul>
           			<li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -81,9 +89,7 @@ $ git checkout gh-pages</code></pre>
 
 		<script type="text/javascript">
         	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-
         </script>
 
 		<script type="text/javascript">
