Added link to Robert Shekley novell. Added links to the lates release. Added link to submit issue. Added link to INSTEAD downloads.

--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
 				<p>This is the game for <a href="http://instead.syscall.ru">INSTEAD</a>. It based on Robert Shekley novell.</p>
 
 <!--
-TODO: Add link to Robert Shekley novell.
-TODO: Add release.
-TODO: Add links to lates release.
-TODO: Add link to submit issue.
 TODO: Add screenshots.
-TODO: Link to INSTEAD downloads.
 -->
 
         		<ul>
-          			<li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/zipball/master">Download <strong>ZIP File</strong></a></li>
+          			<li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/archive/v0.5.zip">Download <strong>ZIP File</strong></a></li>
           			<li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril">View On <strong>GitHub</strong></a></li>
+          			<li><a href="https://github.com/DanilKorotenko/thePrizeOfPeril/issues/new">Submit the <strong>issue</strong></a></li>
         		</ul>
 
       		</header>
 
 			<section>
 
-        		<h3>
-					<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to play
-				</h3>
-
+        		<h3>How to play</h3>
 				<ol>
-					<li>Download and install <a href="http://instead.syscall.ru">INSTEAD</a>;</li>
-					<li>Download game <a href="https://github.com/DanilKorotenko/thePrizeOfPeril/zipball/master">zip file</a>;</>
+					<li><a href="http://instead.syscall.ru/download/">Download</a> and install INSTEAD;</li>
+					<li>Download game <a href="https://github.com/DanilKorotenko/thePrizeOfPeril/archive/v0.5.zip">zip file</a>;</>
 					<li>Open zip file in INSTEAD;</li>
 				</ol>
+
+        		<h3>About Robert Sheckley</h3>
+				<p>The late Robert Sheckley was one of science fiction's premiere satirists and humorists, rivaled for that title only by Kurt Vonnegut and Douglas Adams (who was himself clearly influenced by Sheckley), and he was more prolific than either of them, particularly at shorter lengths, turning out hundreds of short stories over the course of his fifty-three year career. Sheckley sold his first novel, Immortality, Inc., in 1958, and followed it up over the years with other novels such as Dimension of Miracles, Mindswap, The Status Civilization, Journey Beyond Tomorrow, Watchbird, Journey of Joenes, The 10th Victim, Hunter/Victim, Victim Prime, and Godshome. He has also written five mystery novels as Stephen Dain, three "Hob Draconian" mysteries under his own name, a Babylon 5 novel, and three novels in collaboration with Roger Zelazny, Bring Me the Head of Prince Charming, A Farce to Be Reckoned With, and If at Faust You Don't Succeed. His many short stories have been collected in Can You Feel Anything When I Do This?, Citizen in Space, Notions: Unlimited, The People Trap and Other Pitfalls, Pilgrimage to Earth, Shards of Space, The Robot Who Looked Like Me, Untouched by Human Hands, and others. His last book was a massive retrospective collection, The Masque of Manana. He was named Author Emeritus by the Science Fiction Writers of America in 2001. He died in 2005.</p>
+
+				<p>Two of his most famous stories, "The Seventh Victim" and the story that follows, "The Prize of Peril", predicted the twin crazes of reality TV and Adventure Gaming more than forty years before they actually came into existence—and still bear palpable stings in their sleek and shiny tails even to this very day.</p>
+
+				<p>Read <a href="http://www.baenebooks.com/chapters/9781625791412/9781625791412___2.htm">"The Prize Of Peril" by Robert Shekley.</a></p>
 
 			</section>
 
