--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ TODO: Add screenshots.
 
 			<section>
 
-        		<h3>How to play</h3>
+        		<h3>How to start to play</h3>
 				<ol>
 					<li><a href="http://instead.syscall.ru/download/">Download</a> and install INSTEAD;</li>
 					<li>Download game <a href="https://github.com/DanilKorotenko/thePrizeOfPeril/archive/v0.51.zip">zip file</a>;</>
